tests/ui/parser/pragma_unknown.stderr
error: unknown pragma
  --> ROOT/tests/ui/parser/pragma_unknown.sol:LL:CC
   |
LL | pragma foo bar;
   | ^^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> ROOT/tests/ui/parser/pragma_unknown.sol:LL:CC
   |
LL | pragma amogus;
   | ^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> ROOT/tests/ui/parser/pragma_unknown.sol:LL:CC
   |
LL | pragma amogus sus;
   | ^^^^^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> ROOT/tests/ui/parser/pragma_unknown.sol:LL:CC
   |
LL | pragma amogus 69;
   | ^^^^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> ROOT/tests/ui/parser/pragma_unknown.sol:LL:CC
   |
LL | pragma amogus 69 diwqbn9ru3b2q945 390ru31290r 0qjr09wadm;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: aborting due to 5 previous errors

